<resources>
    <string name="app_name">Daily Pain</string>
    <string name="create_account">Створення облікового запису</string>
    <string name="name">Ім\'я*</string>
    <string name="last_name">Прізвище*</string>
    <string name="patronymic">По батькові</string>
    <string name="date_of_birth">Дата народження*</string>
    <string name="required_field">* - Поле обов\'язкове для заповнення</string>
    <string name="create_account_button">Створити обліковий запис</string>
    <string name="category_color">Колір категорії</string>
    <string name="category_name">Назва категорії</string>
    <string name="create_category_field">Ваша назва...</string>
    <string name="submitCategoryButtonText">Додати категорію</string>
    <string name="createCategoryButton">Створити категорію</string>
    <string name="createSymptomButton">Створити запис</string>
    <string name="createReportButton">Створити звіт</string>
    <string name="openDirectoryButton">Відкрити папку зі створеними звітами</string>
    <string name="deleteAccount">Видалити обліковий запис</string>
    <string name="settingsText">Налаштування</string>
    <string name="setTimeButton">Обрати час</string>
    <string name="setDateButton">Обрати дату</string>
    <string name="Start">Початок:</string>
    <string name="End">Кінець:</string>
    <string name="chooseCategory">Оберіть категорію:</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>