<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textOfNameCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/category_name"
        android:textSize="20dp"

        app:layout_constraintLeft_toLeftOf="@id/textInputLayout"
        app:layout_constraintBottom_toTopOf="@id/textInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"

        android:hint="@string/create_category_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textOfColorPreview">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/textOfColorPreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/category_color"
        android:textSize="20dp"

        app:layout_constraintLeft_toLeftOf="@id/colorPickerView"
        app:layout_constraintBottom_toTopOf="@id/colorPickerView" />

    <com.skydoves.colorpickerview.ColorPickerView
        android:id="@+id/colorPickerView"
        android:layout_width="300dp"
        android:layout_height="300dp"

        app:layout_constraintTop_toBottomOf="@id/textInputLayout"
        app:layout_constraintBottom_toTopOf="@id/submitCategoryButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/submitCategoryButton"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/submitCategoryButtonText"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/colorPickerView" />

</androidx.constraintlayout.widget.ConstraintLayout>