<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textOfCategory"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="текст категорії"
        android:textAlignment="center"

        android:textSize="30dp"

        app:layout_constraintBottom_toTopOf="@id/textPainLevel"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textPainLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Рівень болю:"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/painSlider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textOfCategory"
        app:layout_constraintVertical_bias="0.761" />

    <com.google.android.material.slider.Slider
        android:id="@+id/painSlider"
        android:layout_width="300dp"
        android:layout_height="50dp"

        android:valueFrom="0"
        android:valueTo="10"
        android:value="4"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textInputAdditional"
        app:layout_constraintTop_toBottomOf="@+id/textPainLevel" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputAdditional"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="Додатково"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textStart"
        app:layout_constraintTop_toBottomOf="@+id/painSlider">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_patronymic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Start"
        android:textSize="25dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputAdditional"
        app:layout_constraintBottom_toTopOf="@id/setAllStartButtons"/>

    <LinearLayout
        android:id="@+id/setAllStartButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textStart"
        app:layout_constraintBottom_toTopOf="@id/textEnd">

        <Button
            android:id="@+id/setStartTimeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/setTimeButton" />

        <Button
            android:id="@+id/setStartDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/setDateButton" />

    </LinearLayout>

    <TextView
        android:id="@+id/textEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/End"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@id/setAllEndButtons"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setAllStartButtons" />

    <LinearLayout
        android:id="@+id/setAllEndButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setAllStartButtons"
        app:layout_constraintBottom_toTopOf="@id/createCategoryButton">

        <Button
            android:id="@+id/setEndTimeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/setTimeButton" />



        <Button
            android:id="@+id/setEndDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/setDateButton" />
    </LinearLayout>


    <Button
        android:id="@+id/createCategoryButton"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/createSymptomButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setAllEndButtons"
        app:layout_constraintVertical_bias="0.893" />


</androidx.constraintlayout.widget.ConstraintLayout>